--- a/cpbstats-ihm/package.json
+++ b/cpbstats-ihm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cpbrennestt-statstrack",
+  "name": "cpbstats-ihm",
   "version": "1.0.0",
   "dependencies": {},
   "repository": {},
