--- a/cpbstats-ihm/bower.json
+++ b/cpbstats-ihm/bower.json
@@ -1,27 +1,36 @@
 {
-  "name": "cpbrennestt-statstrack",
+  "name": "cpbstats-ihm",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "^1.3.15",
-    "bootstrap": "^3.2.0",
-    "angular-animate": "^1.3.15",
-    "angular-resource": "^1.3.15",
-    "angular-route": "^1.3.15",
-    "angular-sanitize": "^1.3.15",
-    "angular-touch": "^1.3.15",
+    "angular": "~1.4.1",
+    "angular-animate": "~1.4.1",
+    "angular-resource": "~1.4.1",
+    "angular-route": "~1.4.1",
+    "angular-sanitize": "~1.4.1",
+    "angular-touch": "~1.4.1",
     "angular-bootstrap": "~0.12.1",
     "angularjs-toaster": "~0.4.13",
     "angular-file-upload": "1.1.5",
-    "angular-pdf" : "0.4.0",
+    "angular-pdf": "0.4.0",
     "angular-modal-service": "0.6.6",
-    "angular-ui-grid" : "3.0.0-rc.21"
+    "angular-ui-grid": "3.0.0-rc.21",
+    "bootstrap": "~3.3.5"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.15"
+    "angular-mocks": "~1.4.1"
   },
   "appPath": "app",
   "moduleName": "app",
   "resolutions": {
-    "angular": "^1.3.15"
+    "angular": "~1.4.1"
+  },
+  "overrides":{
+    "bootstrap" : {
+         "main": [
+            "less/bootstrap.less",
+            "dist/css/bootstrap.css",
+            "dist/js/bootstrap.js"
+          ]
+    }
   }
 }
