--- a/cpbstats-ihm/bower.json
+++ b/cpbstats-ihm/bower.json
@@ -14,7 +14,8 @@
     "angular-pdf": "0.4.0",
     "angular-modal-service": "0.6.6",
     "angular-ui-grid": "3.0.0-rc.21",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-chart.js": "~0.7.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1"
@@ -24,13 +25,13 @@
   "resolutions": {
     "angular": "~1.4.1"
   },
-  "overrides":{
-    "bootstrap" : {
-         "main": [
-            "less/bootstrap.less",
-            "dist/css/bootstrap.css",
-            "dist/js/bootstrap.js"
-          ]
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "less/bootstrap.less",
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
     }
   }
 }
