--- a/cpbstats-api/pom.xml
+++ b/cpbstats-api/pom.xml
@@ -59,6 +59,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 		</dependency>
@@ -83,7 +88,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -234,7 +239,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
 				<configuration>
 					<wtpapplicationxml>true</wtpapplicationxml>
 					<wtpversion>2.0</wtpversion>
@@ -248,9 +252,9 @@
 					<apiSources>
 						<apiSource>
 							<springmvc>false</springmvc>
-							<locations>fr.cpbrennestt.api</locations>
+							<locations>fr.cpbstats.api</locations>
 							<schemes>http,https</schemes>
-							<basePath>/cpbrennestt-api/rest</basePath>
+							<basePath>/cpbstats-api/rest</basePath>
 							<info>
 								<title>CPB Stats APIs</title>
 								<version>${project.version}</version>
@@ -302,7 +306,8 @@
 		</extensions>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
