--- a/cpbstats-ihm/bower.json
+++ b/cpbstats-ihm/bower.json
@@ -15,7 +15,8 @@
     "angular-modal-service": "0.6.6",
     "angular-ui-grid": "3.0.0-rc.21",
     "bootstrap": "~3.3.5",
-    "angular-chart.js": "~0.7.2"
+    "angular-chart.js": "~0.7.2",
+    "angular-spinner": "~0.6.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1"
